--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,14 @@ services:
   redis-backup:
     image: redis:6-alpine
     volumes:
-      - redis-data:/data
+      - ./redis-data:/data
       - ./backups:/backups
-    command: sh -c 'while true; do redis-cli -h redis SAVE && cp /data/dump.rdb /backups/dump_$(date +%Y%m%d_%H%M%S).rdb && sleep 86400; done'
-    depends_on:
-      - redis
+    command: >
+      sh -c 'while true; do
+        redis-cli -h redis SAVE &&
+        cp /data/dump.rdb /backups/dump_$$(date +%Y%m%d_%H%M%S).rdb &&
+        sleep 86400;
+      done'
 
 volumes:
   redis-data:
